Compiler/tests/bad/Variables/11_variable.rs
fn main(){
    let x : &Vec<i32> = vec![4];
}
